--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container-flex">
     <div class="row align-items-center justify-content-around mx-5">
             <app-product-item *ngFor="let product of products" [product]="product" class="col-md-4 col-mx-12 px-5"></app-product-item>
