--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="header">
+    <h1>MyStore</h1>
+        <a href="">Product List</a>
+        <span> | </span>
+        <a href="">Cart</a>
+        <span> 🛒</span>
+</div>
