--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,38 @@
-<p>cart works!</p>
+<app-header></app-header>
+
+<div *ngIf="cart.length==0" class="empty-cart-message row justify-content-center">
+    <h5 class="col-12 text-center mb-3">Cart is empty</h5>
+    <button class="btn btn-primary" routerLink="/">Go back to product list</button>
+</div>
+
+<div *ngIf="cart.length>0" class="cart-container container">
+    <div class="cart-panel justify-content-center mb-3">
+        <div *ngFor="let item of cart" class="cart-item">
+            <img src={{item.url}}>
+            <div class="cart-item-details">
+                <p><b>{{item.name}}</b></p>
+                <p>${{item.price}}</p>
+                <div>
+                    <label for="amount">Amount:</label>
+                    <input class="number-input mx-1" type="number" value={{item.amount}} min=0 max=99 required
+                        [(ngModel)]="item.amount" (ngModelChange)="amountChange(item)">
+                </div>
+            </div>
+        </div>
+        <div>
+            <h1>Total: ${{total}}</h1>
+        </div>
+    </div>
+    <div class="cart-panel justify-content-center">
+        <form (ngSubmit)="onSubmit()">
+            <label class="form-margin" for="name" >Full name</label>
+            <input class="form-control form-margin" type="text" id="name" placeholder="(minimun 3 characters)" style="display: block;">
+            <label class="form-margin" for="address">Address</label>
+            <input class="form-control form-margin" type="text" id="name" placeholder="(minimun 6 characters)" style="display: block;">
+            <label class="form-margin" for="cred">Credit card number</label>
+            <input class="form-control form-margin" type="text" id="cred" placeholder="(16-digit number)" style="display: block;">
+            <p class="form-margin" >We'll never share your payment details with anyone else.</p>
+            <button class="btn btn-primary" type="submit" style="display: block;">Submit</button>
+        </form>
+    </div>
+</div>
