--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <h1>MyStore</h1>
-        <a href="">Product List</a>
+        <a routerLink="/">Product List</a>
         <span> | </span>
-        <a href="">Cart</a>
+        <a routerLink="/cart">Cart</a>
         <span> 🛒</span>
 </div>
