--- a/src/app/components/confirmation/confirmation.component.html
+++ b/src/app/components/confirmation/confirmation.component.html
@@ -1,1 +1,10 @@
-<p>confirmation works!</p>
+<app-header></app-header>
+<div class="confirmation-container">
+    <div class="confirmation-items">
+        <h1 class="confirmation-header confirmation-item">Success!🎉</h1>
+        <p class="confirmation-item">Thank you, <b>{{name}}</b>!</p>
+        <p class="confirmation-item">Your <b>${{total}}</b> order is confirmed!</p>
+        <p class="confirmation-item">Please allow 1-3 business day(s) for shipping.</p>
+        <button class="btn btn-primary" routerLink="/">Back to product list</button>
+    </div>
+</div>
