--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,17 +1,16 @@
 <div class="product-container container align-item-center">
     <div class="row justify-content-center text-center">
-        <img class="product-image col-12" src={{product.url}}>
+        <img class="product-image col-12" src={{product.url}} routerLink="details/{{product.id}}">
         <p class="col-12">{{product.name}}</p>
         <p class="col-12">${{product.price}}</p>
-        <Form class="row col-12 justify-content-center">
-            <select class="select-input">
-                    <option selected value="1">1</option>
-                    <option *ngFor="let i of [2,3,4,5]" value={{i}}>{{i}}</option>
+        <form class="row col-12 justify-content-center" (ngSubmit)="addCart()">
+            <select class="select-input" name="amount" [(ngModel)]="product.amount">
+                <option *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]" value={{i}}>{{i}}</option>
             </select>
             <div class="col-12">
-                <button class="btn btn-primary">Add to cart</button>
+                <button class="btn btn-primary"  type="submit">Add to cart</button>
             </div>
-        </Form>
+        </form>
     </div>
 </div>
 <footer class="mb-5"></footer>
