Add form validation

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -24,15 +24,18 @@
         </div>
     </div>
     <div class="cart-panel justify-content-center">
-        <form (ngSubmit)="onSubmit()">
-            <label class="form-margin" for="name" >Full name</label>
-            <input class="form-control form-margin" type="text" id="name" name="name" [(ngModel)]="name" placeholder="(minimun 3 characters)">
+        <form #form="ngForm" (ngSubmit)="onSubmit()">
+            <label class="form-margin" for="name">Full name</label>
+            <input class="form-control form-margin" type="text" id="name" name="name" [(ngModel)]="name"
+            required minlength="3"placeholder="(minimun 3 characters)">
             <label class="form-margin" for="address">Address</label>
-            <input class="form-control form-margin" type="text" id="address" placeholder="(minimun 6 characters)">
+            <input class="form-control form-margin" type="text" id="address" name="address" [(ngModel)]="address"
+            required minlength="6" placeholder="(minimun 6 characters)">
             <label class="form-margin" for="cred">Credit card number</label>
-            <input class="form-control form-margin" type="text" id="cred" placeholder="(16-digit number)">
-            <p class="form-margin" >We'll never share your payment details with anyone else.</p>
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <input class="form-control form-margin" type="text" id="cred" name="cred" [(ngModel)]="cred"
+            required minlength="16" maxlength="16" pattern="[0-9]+" placeholder="(16-digit number)">
+            <p class="form-margin">We'll never share your payment details with anyone else.</p>
+            <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Submit</button>
         </form>
     </div>
 </div>
