Fix add cart function

--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -4,7 +4,7 @@
         <p class="col-12">{{product.name}}</p>
         <p class="col-12">${{product.price}}</p>
         <form class="row col-12 justify-content-center" (ngSubmit)="addCart()">
-            <select class="select-input" name="amount" [(ngModel)]="product.amount">
+            <select class="select-input" name="amount" [(ngModel)]="amount">
                 <option *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]" value={{i}}>{{i}}</option>
             </select>
             <div class="col-12">
