--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -32,8 +32,8 @@
             <input class="form-control form-margin" type="text" id="address" name="address" [(ngModel)]="address"
             required minlength="6" placeholder="(minimun 6 characters)">
             <label class="form-margin" for="cred">Credit card number</label>
-            <input class="form-control form-margin" type="text" id="cred" name="cred" [(ngModel)]="cred"
-            required minlength="16" maxlength="16" pattern="[0-9]+" placeholder="(16-digit number)">
+            <input class="form-control form-margin" type="number" id="cred" name="cred" [(ngModel)]="cred"
+            required min="0" max="9999999999999999" pattern="[0-9]+" placeholder="(16-digit number)">
             <p class="form-margin">We'll never share your payment details with anyone else.</p>
             <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Submit</button>
         </form>
