--- a/src/app/components/product-item-details/product-item-details.component.html
+++ b/src/app/components/product-item-details/product-item-details.component.html
@@ -9,7 +9,7 @@
             <p>${{product.price}}</p>
             <p>{{product.description}}</p>
             <form (ngSubmit)="addCart()">
-                <select class="select-input" name="amount" [(ngModel)]="product.amount">
+                <select class="select-input" name="amount" [(ngModel)]="amount">
                     <option *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]" value={{i}}>{{i}}</option>
                 </select>
                 <div class="col-12 justify-content-left px-0">
