Add form validation messages

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -27,15 +27,36 @@
         <form #form="ngForm" (ngSubmit)="onSubmit()">
             <label class="form-margin" for="name">Full name</label>
             <input class="form-control form-margin" type="text" id="name" name="name" [(ngModel)]="name"
-            required minlength="3"placeholder="(minimun 3 characters)">
+                #nameInput="ngModel" required minlength="3" placeholder="(minimun 3 characters)">
             <label class="form-margin" for="address">Address</label>
             <input class="form-control form-margin" type="text" id="address" name="address" [(ngModel)]="address"
-            required minlength="6" placeholder="(minimun 6 characters)">
+                #addressInput="ngModel" required minlength="6" placeholder="(minimun 6 characters)">
             <label class="form-margin" for="cred">Credit card number</label>
             <input class="form-control form-margin" type="number" id="cred" name="cred" [(ngModel)]="cred"
-            required min="0" max="9999999999999999" pattern="[0-9]+" placeholder="(16-digit number)">
+                #credInput="ngModel" required min="0" max="9999999999999999" pattern="[0-9]+"
+                placeholder="(16-digit number)">
             <p class="form-margin">We'll never share your payment details with anyone else.</p>
             <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Submit</button>
         </form>
+        <div *ngIf="form.invalid && form.dirty" [ngStyle]="{'color':'red', 'font-size':'12px'}" >
+            <div *ngIf="nameInput.hasError('required')">
+                Please provide a full name.
+            </div>
+            <div *ngIf="nameInput.hasError('minlength')">
+                The full name must contain atleast 3 characters.
+            </div>
+            <div *ngIf="addressInput.hasError('required')">
+                Please provide an address.
+            </div>
+            <div *ngIf="addressInput.hasError('minlength')">
+                An address must contain atleast 6 characters.
+            </div>
+            <div *ngIf="credInput.hasError('required')">
+                Please provide a credit card number.
+            </div>
+            <div *ngIf="credInput.hasError('max')">
+                The credit card number should be 16 digits number.
+            </div>
+        </div>
     </div>
 </div>
